[gd_scene load_steps=6 format=3 uid="uid://dd63ky7uwcrd7"]

[ext_resource type="Script" path="res://scripts/you_win.gd" id="1_b0mao"]
[ext_resource type="Texture2D" uid="uid://bwmfo8a0ifvx8" path="res://assets/images/Backgrounds/backgroundCastles.png" id="2_ww7pd"]
[ext_resource type="FontFile" uid="uid://cbh3hxq8qdpwb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_glnjk"]
[ext_resource type="FontFile" uid="uid://cmfmyu1epvek8" path="res://assets/fonts/PixelOperator8.ttf" id="4_2l824"]
[ext_resource type="Texture2D" uid="uid://ca44t75a5yxb3" path="res://assets/images/little-knight-sword.png" id="5_0dos6"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0mao")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.2, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ww7pd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Seperator1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label_Congrats" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_glnjk")
theme_override_font_sizes/font_size = 40
text = "Congratulations
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator3" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label_you_win" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_glnjk")
theme_override_font_sizes/font_size = 65
text = "\"YOU WIN !!!\"
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label_score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_glnjk")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator4" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_glnjk")
theme_override_font_sizes/font_size = 65
text = "POINTS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Button_leaderboard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2l824")
theme_override_font_sizes/font_size = 24
text = "Leaderboard"

[node name="Button_back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2l824")
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="Sprite_knight_right" type="Sprite2D" parent="."]
position = Vector2(960, 333)
scale = Vector2(0.295288, 0.285714)
texture = ExtResource("5_0dos6")
flip_h = true

[node name="Sprite_knight_left" type="Sprite2D" parent="."]
position = Vector2(203, 333)
scale = Vector2(0.295288, 0.285714)
texture = ExtResource("5_0dos6")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_leaderboard" to="." method="_on_button_leaderboard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_back" to="." method="_on_button_back_pressed"]
